data table using material, google-charts intg to angular sample

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/heroes">Heroes</a>
+    <a routerLink="/table_data">Table Data</a>
+    <a routerLink="/table_data/charts">Table Charts</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
